--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frontend",
   "version": "0.1.0",
-  "homepage": "https://huyhoang112121.github.io/client1/",
+  "homepage": "https://tranlehuyhoang.github.io/client1/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
